Fixed a clipping issue on tablet

--- a/src/app/components/todo/todo.component.scss
+++ b/src/app/components/todo/todo.component.scss
@@ -4,7 +4,7 @@
 .sidebar {
   background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 0.5)), linear-gradient(to bottom, rgba(14, 127, 166, 0.8), rgba(14, 127, 166, 0.8));
   bottom: 0;
-  min-height: calc(100% - $header-height);
+  height: 100%;
   position: absolute;
   top: $header-height;
   width: 100%;
@@ -14,7 +14,7 @@
   .main { 
     padding: 8px;
     right: 0;
-    width: calc(100vw - $sidebar-width);
+    width: calc(100vw - #{$sidebar-width});
   }
 
   .sidebar {
